--- a/src/Serilog.Formatting.Elasticsearch/Serilog.Formatting.ElasticSearch.nuspec
+++ b/src/Serilog.Formatting.Elasticsearch/Serilog.Formatting.ElasticSearch.nuspec
@@ -7,7 +7,7 @@
     <description>The perfect way for .NET apps formatting structured log events to Elasticsearch JSON. This package contains the formatter used for the Elasticsearch Sink.</description>
     <language>en-US</language>
     <projectUrl>http://serilog.net</projectUrl>
-    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
+    <license>http://www.apache.org/licenses/LICENSE-2.0</license>
     <iconUrl>http://serilog.net/images/serilog-sink-nuget.png</iconUrl>
     <repository type="git" url="https://github.com/serilog/serilog-sinks-elasticsearch" />
     <tags>serilog logging elasticsearch formatters</tags>
